# dofus-hunteRS

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: pr-build.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/composent/: actions.rs  api.rs  arrows.rs  config.rs  mod.rs  ocr.rs  screenshot.rs  window.rs
src-tauri/src/core/: actions.rs  api.rs  arrows.rs  config.rs  error.rs  mod.rs  ocr.rs  screenshot.rs  state.rs  window.rs
src-tauri/src/models/: eq.rs  mod.rs
src-tauri/src/ocr/: mod.rs
src/components/: Monitor.tsx  Navbar.tsx  RegionSelector.tsx  SettingsPanel.tsx  arrow-selector.tsx  coordinate-input.tsx  history-list.tsx  status-indicator.tsx
src/models/: models.tsx
src/pages/: DebugPage.tsx  HomePage.tsx  SettingsPage.tsx  home.tsx
src/store/: BotState.tsx
src/styles/: SettingsPanel.css
