[package]
name = "dofus-hunters"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dofus_hunters_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
vcpkg = "0.2.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ocrs = "0.9.0"
rten = { version = "0.13.1" }
xcap = "0.2.2"
opencv = { version = "0.94.2" }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }

regex = "1.11.1"
fastrand = "2.1.1"
lexopt = "0.3.0"
anyhow = "1.0.93"
rayon = "1.10.0"
thiserror = "2.0.3"
config = "0.15.6"
quote = "1.0.38"
syn = "2.0.96"
proc-macro2 = "1.0.93"
ndarray = "0.16.0"
rten-imageproc = { version = "0.13.1" }
rten-tensor = "0.13.1"


